--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "tsc && cp src/components/*.css dist/components && rm -rf dist/stories && rm -rf dist/src",
     "lint": "eslint \"{**/*,*}.{js,ts,jsx,tsx}\"",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "postinstall": "cd node_modules/flowtoken && npm run build"
   },
   "keywords": [
     "ai",
