--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint": "eslint \"{**/*,*}.{js,ts,jsx,tsx}\"",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
-    "postinstall": "tsc --outDir ./build"
+    "postinstall": "tsc && cp src/components/*.css dist/components && rm -rf dist/stories && rm -rf dist/src"
   },
   "keywords": [
     "ai",
