added rehypeRaw for multiline table cells

--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-markdown": "^9.0.1",
     "react-syntax-highlighter": "^15.5.0",
     "regexp-tree": "^0.1.27",
+    "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.0"
   }
 }
